tela de cadastro atualizada com btn voltar

--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -1,23 +1,20 @@
 <html>
  <head>
-  <title>
-   Cadastro
-  </title>
+  <title>Cadastro</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="../site/assets/css/cadastro.css">
  </head>
  <body>
-    <a href="index.html">
-        <img class="img_btn_voltar" src="assets/img/btn_voltar_cadastro.jpg" alt="btn voltar">
-      </a>
+ 
   <div class="container">
    <div class="image-section">
    </div>
    <div class="form-section">
     <div class="form-container">
-     <h2>
-      CADASTRE-SE AQUI
-     </h2>
+     <a href="index.html" class="btn_voltar">
+        <img class="img_btn_voltar" src="assets/img/btn_voltar_cadastro.jpg" alt="btn voltar">
+     </a>
+     <h2>CADASTRE-SE AQUI</h2>
      <div class="form-group">
       <i class="fas fa-user"></i>
       <input placeholder="Nome completo" type="text"/>
@@ -54,25 +51,14 @@
       </label>
      </div>
      <div class="form-group">
-      <button type="submit">
-       CADASTRE-SE
-      </button>
+      <button type="submit">CADASTRE-SE</button>
      </div>
      <br>
      <div class="terms">
       Ao clicar em Cadastre-se, você concorda com nossos
-      <a href="#">
-       Termos
-      </a>
-      ,
-      <a href="#">
-       Política de Privacidade
-      </a>
-      e
-      <a href="#">
-       Política de Cookies
-      </a>  
-      . Você poderá receber notificações por SMS e cancelar isso quando quiser.
+      <a href="#">Termos</a>,
+      <a href="#">Política de Privacidade</a> e
+      <a href="#">Política de Cookies</a>. Você poderá receber notificações por SMS e cancelar isso quando quiser.
      </div>
      <div class="logo">
       <img src="../site/assets/img/logo_cadastro.jpg"/>
