--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -30,7 +30,7 @@
      <br>
      <b>Insira a sua data de nascimento (dd/mm/aaaa):</b>
      <br>
-     <div class="form-group">
+     <div class="form-group input-data">
       <input placeholder="Dia" type="text" style="width: calc(33.33% - 10px);"/>
       <input placeholder="Mês" type="text" style="width: calc(33.33% - 10px);"/>
       <input placeholder="Ano" type="text" style="width: calc(33.33% - 10px);"/>
@@ -48,7 +48,7 @@
       <label>
        <input name="gender" type="radio" value="Outro"/>
        <span>Outro</span>
-      </label>
+      </label> <br> <br>
      </div>
      <div class="form-group">
       <button type="submit">CADASTRE-SE</button>
@@ -56,11 +56,11 @@
      <br>
      <div class="terms">
       Ao clicar em Cadastre-se, você concorda com nossos
-      <a href="#">Termos</a>,
       <a href="#">Política de Privacidade</a> e
       <a href="#">Política de Cookies</a>. Você poderá receber notificações por SMS e cancelar isso quando quiser.
      </div>
      <div class="logo">
+      <a href="#">Termos</a>,
       <img src="../site/assets/img/logo_cadastro.jpg"/>
      </div>
     </div>
