--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
   <div class="container">
     <div class="login">
       <a href="index.html">
@@ -26,7 +24,7 @@
         </div>
         <p id="erro_senha" class="tex_erro"></p>
         <div class="ipt-container" id="div_senha">
-          <img src="assets/img/personal.png" alt="">
+          <img src="assets/img/password.png" alt="">
           <input oninput="validarSenha()" id="ipt_senha" type="password" placeholder="Senha">
         </div>
         <a class="texSenha" href="#">Esqueceu sua senha?<span class="texSpan"> Clique aqui.</span></a>
@@ -35,14 +33,10 @@
         <button onclick="login()" class="btn_entrar">Entrar</button>
         <a class="texCadastro" href="cadastro.html">Ainda não tem uma conta?</a>
       </div>
-
       <div class="img_logo_ondo"></div>
     </div>
     <div class="image-wasabi"></div>
   </div>
-
-
-
 </body>
 
 </html>
