Ajustes nos tamanhos e espaçamentos

--- a/repo-sprint2/site/calculadora.html
+++ b/repo-sprint2/site/calculadora.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/calculadora.css">
     <link rel="stylesheet" href="./assets/css/MenuNav.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <title>Calculadora</title>
 </head>
 
