--- a/repo-sprint2/site/footer.html
+++ b/repo-sprint2/site/footer.html
@@ -13,7 +13,7 @@
 
       <div class="content_footer">
         <div class="logo_ondo">
-          <img src="assets/img/Logo ONDO footer.svg" alt="" />
+          <img src="assets/img/Logo ONDO footer.svg" />
         </div>
 
         <div class="inf_center_footer">All rights reserved by ONDO</div>
