--- a/repo-sprint2/site/missao.html
+++ b/repo-sprint2/site/missao.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/missao.css">
     <link rel="stylesheet" href="./assets/css/MenuNav.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 
 <body>
