ajustes nas imagem e criação do dashboard

--- a/repo-sprint2/site/calculadora.html
+++ b/repo-sprint2/site/calculadora.html
@@ -102,7 +102,7 @@
 
         <div class="content_footer">
             <div class="logo_ondo">
-                <img src="assets/img/Logo ONDO footer.svg" alt="" />
+                <img src="assets/img/logo_branco.png" alt="" />
             </div>
 
             <div class="inf_center_footer">All rights reserved by ONDO</div>
