--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -1,5 +1,4 @@
 <html>
-<<<<<<< HEAD
 <head>
     <title>Cadastro</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
@@ -8,7 +7,7 @@
 <body>
     <div class="container">
         <div class="image-section"></div>
-        <a href="cadastro.html">
+        <a href="index.html">
             <img class="img_btn_voltar" src="assets/img/btn_voltar.png" alt="btn voltar">
         </a>
         <div class="form-container">
@@ -16,38 +15,38 @@
             
             <div class="form-group">
                 <i class="fas fa-id-card"></i>
-                <input class="main-input" placeholder="CNPJ" type="text"/>
+                <input class="main-input" placeholder="CNPJ" type="text" oninput="validar()"/>
             </div>
             <div class="form-group">
                 <i class="fas fa-building"></i>
-                <input class="main-input" placeholder="Razão social" type="text"/>
+                <input class="main-input" placeholder="Razão social" type="text" oninput="validar()"/>
             </div>
             <div class="form-group">
                 <i class="fas fa-industry"></i>
-                <input class="main-input" placeholder="Nome fantasia" type="text"/>
+                <input class="main-input" placeholder="Nome fantasia" type="text" oninput="validar()"/>
             </div>
             <div class="form-group">
                 <i class="fas fa-user-tie"></i>
-                <input class="main-input" placeholder="Responsável" type="text"/>
+                <input class="main-input" placeholder="Responsável" type="text" oninput="validar()"/>
             </div>
             <div class="form-group">
                 <i class="fas fa-envelope"></i>
-                <input class="main-input" placeholder="E-mail" type="text"/>
+                <input class="main-input" placeholder="E-mail" type="text" oninput="validar()"/>
             </div>
             <div class="form-group">
                 <i class="fas fa-lock"></i>
-                <input class="main-input" placeholder="Senha" type="password"/>
+                <input class="main-input" placeholder="Senha" type="password" oninput="validar()"/>
             </div>
             <br>
             <span style="margin-left: 75px;"><b>Endereço:</b></span> <br>
             <div class="form-group">
-                <input class="endereco-input" placeholder="CEP" type="text" style="width: 100px; margin-right: 10px; margin-bottom: 10px;" />
-                <input class="endereco-input" placeholder="Bairro" type="text" style="width: 485px; margin-left: 0px;"/>
-                <input class="endereco-input" placeholder="Logradouro" type="text" style="margin-bottom: 10px;"/>
-                <input class="endereco-input" placeholder="Cidade" type="text" style="width:485px; margin-right: 10px;" />
-                <input class="endereco-input" placeholder="Estado" type="text" style="width: 100px; margin-left: 0px;" /> 
-            </div><br>
-
+                <input class="endereco-input" placeholder="CEP" type="text" style="width: 100px; margin-right: 10px; margin-bottom: 10px;" oninput="handleInput(this.value)"/>
+                <input class="endereco-input" placeholder="Bairro" type="text" style="width: 485px; margin-left: 0px;" oninput="handleInput(this.value)"/>
+                <input class="endereco-input" placeholder="Logradouro" type="text" style="margin-bottom: 10px;" oninput="handleInput(this.value)"/>
+                <input class="endereco-input" placeholder="Cidade" type="text" style="width:485px; margin-right: 10px;" oninput="handleInput(this.value)"/>
+                <input class="endereco-input" placeholder="Estado" type="text" style="width: 100px; margin-left: 0px;" oninput="handleInput(this.value)"/>
+            </div>
+            <br>
             <div class="form-group">
                 <button type="submit">CADASTRE-SE</button>
             </div>
@@ -65,74 +64,6 @@
         </div>
     </div>
 </body>
-=======
- <head>
-  <title>Cadastro</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../site/assets/css/cadastro.css">
- </head>
- <body>
- 
-  <div class="container">
-   <div class="image-section">
-   </div>
-   <div class="form-section">
-    <div class="form-container">
-     <a href="index.html" class="btn_voltar">
-        <img class="img_btn_voltar" src="assets/img/btn_voltar_cadastro.jpg" alt="btn voltar">
-     </a>
-     <h2>CADASTRE-SE AQUI</h2>
-     <div class="form-group">
-      <i class="fas fa-user"></i>
-      <input placeholder="Nome completo" type="text"/>
-     </div>
-     <div class="form-group">
-      <i class="fas fa-envelope"></i>
-      <input placeholder="Celular ou e-mail" type="text"/>
-     </div>
-     <div class="form-group">
-      <i class="fas fa-lock"></i>
-      <input placeholder="Senha" type="password"/>
-     </div>
-     <br>
-     <b>Insira a sua data de nascimento (dd/mm/aaaa):</b>
-     <br>
-     <div class="form-group input-data">
-      <input placeholder="Dia" type="text" style="width: calc(33.33% - 10px);"/>
-      <input placeholder="Mês" type="text" style="width: calc(33.33% - 10px);"/>
-      <input placeholder="Ano" type="text" style="width: calc(33.33% - 10px);"/>
-     </div>
-     <br>
-     <div class="form-group gender">
-      <label>
-       <input name="gender" type="radio" value="Feminino"/>
-       <span>Feminino</span>
-      </label>
-      <label>
-       <input name="gender" type="radio" value="Masculino"/>
-       <span>Masculino</span>
-      </label>
-      <label>
-       <input name="gender" type="radio" value="Outro"/>
-       <span>Outro</span>
-      </label> <br> <br>
-     </div>
-     <div class="form-group">
-      <button type="submit">CADASTRE-SE</button>
-     </div>
-     <br>
-     <div class="terms">
-      Ao clicar em Cadastre-se, você concorda com nossos
-      <a href="#">Política de Privacidade</a> e
-      <a href="#">Política de Cookies</a>. Você poderá receber notificações por SMS e cancelar isso quando quiser.
-     </div>
-     <div class="logo">
-      <a href="#">Termos</a>,
-      <img src="../site/assets/img/logo_cadastro.jpg"/>
-     </div>
-    </div>
-   </div>
-  </div>
- </body>
->>>>>>> 50621f0e7a071964fd64b8876efce870bc0427de
 </html>
+
+
