retirada do titulo do grafico

--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -82,7 +82,7 @@
         <div style="display: flex;" class="grafico_container">
           
           <div class="grafico">
-            <h3>Análise de Temperaturas</h3>
+            <!-- <h3>Análise de Temperaturas</h3> -->
             <canvas  id="grafico_barra" style="height: 100%; width: 100%;"></canvas>
               
           </div>
@@ -147,7 +147,7 @@
     options: {
       plugins: {
         title: {
-          display: false, // Define se o título deve ser exibido
+          display: true, // Define se o título deve ser exibido
           text: "Análise de Temperaturas", // O texto do título
           font: {
             size: 20, // Tamanho da fonte do título
