lendo os dados da api

--- a/repo-sprint2/projeto/dat-acqu-ino/index.html
+++ b/repo-sprint2/projeto/dat-acqu-ino/index.html
@@ -94,7 +94,7 @@
                         }
 
                         grafico.data.labels.push(tempo[endpoint]++);
-                        grafico.data.datasets[0].data.push(parseFloat(valor));
+                        grafico.data.datasets[0].data.push(parseFloat(valor.temperatura));
                         grafico.update();
                     });
                 })
